# py_mcp_roject

./: README.md  mcp_client.py  mcp_server.py  pyproject.toml  setup.sh  setup_uv.sh
