[project]
name = "py_mcp_roject"
version = "0.1.0"
description = "MCP Client and Server CLI with Anthropic's LLM via Anthropic API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.51.0",
    "mcp[cli]>=1.8.0",
    "pydantic>=2.0.0",
    "prompt-toolkit>=3.0.51",
    "python-dotenv>=1.1.0",
]
